--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ click==8.1.3
 matplotlib==3.5.1
 numpy==1.26.4
 pandas==1.4.2
-Pillow==9.1.0
+Pillow
 pip==22.2.2
 plotly==5.21.0
 scikit-learn==1.4.1.post1
